- Allow unliminted number of devices in Storage daemon.
- Allow connections to Storage daemon before all devices are initialized.
- Better documentation (and btape test command) on using fixed block
  tape drivers.

Changes submitted this submission:
29Dec02
- Added --enable-client-only to ./configure
- Modified --enable-static-sd to work better and documented it.
28Dec02
- Added more rescue documentation.
- Did a spell check of the Bacula doc.
- Modified bscan to use the working directory as specified in the
  configuration file as the default.
25Dec02
- Fixed an important bug reported by George Motter that caused only
  the last option on an Include record to be used (all previous options
  were lost).
24Dec02
- Chase down some inconsistencies in creating Media records from
  the Pool defaults, and in updating/creating the Pool from the
  resource. Also fixed the cats DB routines to include all
  fileds (VolUseDuration was missing for example).
21Dec02
- Added building static versions of daemon static-bacula-dir, ...
- Fine tuned the rescue (bare metal) code including support for grub.
- Added skeleton freebsd rescue
- Corrected SQL syntax error in autoprune code (JobType => Type).
- Added error messages for SQL errors in autopruning.
19Dec02
- Documented Bare Metal Recovery
- Create new "rescue" directory containg the Bare Metal Recovery code.
- Fiddle with SQL a bit for pruning as apparently the last InitCatalog
  was pruned after the expiration date eventhough it was the ONLY copy!
  I'm not sure this is fixed yet.
18Dec02
- Allow Director to pass a NUL where string to FD (fix in FD).
- Fix installation mv of query.sql.
- Make sure btraceback.gdb is not wiped on "make distclean"
- Corrected a bug in mod of replace options pointed out by Dave Anderson.
16Dec02
- Started adding FileOptions ...
- Fixed  and incorrect print out of the number of files restored (Jarif).
- Finally fixed EndBlock (and file address for Files) in catalog!